Add program files

--- a/COVID Monitoring System/COVID Monitoring System.csproj
+++ b/COVID Monitoring System/COVID Monitoring System.csproj
@@ -6,4 +6,13 @@
     <RootNamespace>COVID_Monitoring_System</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Update="BusinessLocation.csv">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Person.csv">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
